Fixed a bug with expense calculation on home page, potential fix for accumulation chart being too small on home page

--- a/src/styles/SyncFusion.css
+++ b/src/styles/SyncFusion.css
@@ -8,6 +8,16 @@
   color: white !important;
 }
 
+.e-chart {
+  width: inherit !important;
+  height: inherit !important;
+}
+
+.e-accumulationchart {
+  width: inherit !important;
+  height: inherit !important;
+}
+
 /* badge */
 .e-badge {
   color: #fff !important;
